- A página máxima dos tops foram reduzidas de `100` para `99`
- O comando `/top economia` foi renomeado para `/top diversos`
- O comando `/loja vender` foi renomeado para `/loja vender caças`
- Atualizado a descrição dos comandos `/estatísticas`
- O comando `/personalizar temas` agora mostra a data que tu comprou os temas.

### Removed

- O evento de Halloween terminou! Todas mudanças do evento foram revertidas.
- O comando `/top comandos` foi removido.

## [5.9.4-HALLOWEEN] - 2023-10-28

### Changed

- O comando `/top estatísticas apostas` está **MUITO** mais rápido!

### Fixed

- O comando `/perfil` voltou a mostrar as informações de comandos de usuários!

## [5.9.3-HALLOWEEN] - 2023-10-23

### Added

- A loja do evento está aberta!

## [5.9.2-HALLOWEEN] - 2023-10-19

### Fixed

- Corrigido o problema ao finalizar uma partida de poker sem jogadores.

## [5.9.1-HALLOWEEN] - 2023-10-17

### Changed

- O comando `/loja comprar imagem` não permite mais você comprar uma imagem caso você não tenha algum perfil compatível.

## [5.9.0-HALLOWEEN] - 2023-10-14

### Added

- O evento de Halloween começou! Você pode entender melhor sobre o evento usando o comando `/gostosuras ou travessuras`.

## [5.8.4] - 2023-10-12

### Changed

- Os IDs de usuários no `/top` agora são menções.
- Os comandos da Menhera estão mais rápidos! Principalmente os de imagem. Você deve perceber isso no `/perfil`, que agora está mais rápido que uma nave!

### Fixed

- A chance de caçar 4 gigantes estava invertida com a caça de 3.

## [5.8.3] - 2023-10-07

### Changed

- Os impostos foram reduzidos
  - `/blackjack`: Imposto máximo -> **20%**. Teto máximo para o imposto -> **75_000**
  - `/roleta`: Imposto máximo -> **25%**. Teto máximo para o imposto -> **75_000**

### Fixed

- Resolvido erros de português no `/blackjack`

## [5.8.2] - 2023-10-07

### Added
