@@ -56,6 +56,7 @@ export const EMOJIS = {
   badge_11: '<:badge_11:960661745599414282>',
   badge_12: '<:badge_12:960660998849712178>',
   badge_13: '<:badge_13:960661002360336384>',
+  badge_14: '<:badge_14:1168707327256432640>',
   badge_15: '<:badge_15:960661000284151858>',
   badge_16: '<:badge_16:960661002570055750>',
   badge_17: '<:badge_17:990267891079327774>',
