@@ -35,6 +35,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 - O comando `/loja vender` foi renomeado para `/loja vender caças`
 - Atualizado a descrição dos comandos `/estatísticas`
 - O comando `/personalizar temas` agora mostra a data que tu comprou os temas.
+- Agora é possível ver as Badges de um usuário com o `/personalizar badges`
 
 ### Removed
 
